--- a/collegebacker-protected.html
+++ b/collegebacker-protected.html
@@ -207,6 +207,8 @@ a[0]++}h.sigBytes=4*c;return h}});g.PBKDF2=function(d,b,e){return n.create(e).co
 				        // The value returned by a script-targeted URL will be used as
 				        // the iFrame's content. Create such a URL which returns the
 				        // iFrame element's `srcdoc` attribute.
+
+
 				        jsUrl = "javascript: window.frameElement.getAttribute('srcdoc');";
 
 				        iframe.setAttribute("src", jsUrl);
@@ -278,6 +280,7 @@ a[0]++}h.sigBytes=4*c;return h}});g.PBKDF2=function(d,b,e){return n.create(e).co
                 setTimeout(function() {
                     dialogWrap.style.display = "none";
                 }, 1000);
+                window.location.replace("collegebacker.html");
             } catch (e) {
                 invalidPassEl.style.display = "inline";
                 passEl.value = "";
