--- a/collegebacker.html
+++ b/collegebacker.html
@@ -75,7 +75,7 @@
       location.href = "index.html";
     };
     visceral.onclick = function () {
-        location.href = "visceral-protected.html";
+        location.href = "visceral.html";
     };
     maxis.onclick = function () {
         location.href = "maxis.html";
