--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 </script>
 <script type="text/javascript">
     document.getElementById("button1").onclick = function () {
-        location.href = "visceral-protected.html";
+        location.href = "visceral.html";
     };
     document.getElementById("button2").onclick = function () {
         location.href = "maxis.html";
