--- a/tesla.html
+++ b/tesla.html
@@ -79,7 +79,7 @@
     	location.href = "index.html";
     }
     visceral.onclick = function () {
-        location.href = "visceral-protected.html";
+        location.href = "visceral.html";
     };
     maxis.onclick = function () {
         location.href = "maxis.html";
