--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Melody Ting</title>
   <meta name="description" content="Melody Ting">
   <meta name="author" content="SitePoint">
+
   <link href="https://fonts.googleapis.com/css?family=Nunito+Sans&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
@@ -49,12 +50,10 @@
 		      <div class="timeline-slider">
 		        <div class="timeline-slide" style="background-image: url(Work_Documentation/Visceral_Mockup.png)" data-year="1985">
 		          <div class="timeline-slide__content">
-		            <h4 class="timeline-title">EA Visceral</h4>
+		            <h4 class="timeline-title">EA Visceral | UX/UI Design Intern</h4>
 		            <p class="timeline-text">
-						During Summer 2016 and May to October 2017, I served as the UX/UI Design Intern for EA Visceral where I worked on an action-adventure Star Wars console game.
-						I worked with engineers, artists, designers, and product managers to create motion mock ups and design fictional interfaces inspired by the Star Wars universe. <br>
-						<br>I worked alongside my mentor Justin Porter and Matthew Pearson as well as the gameplay and engineering teams to create cinematic UX , including user feedback systems, heads up displays for vehicles, and other diegetic communication features. 
-						I conceptualized, prototyped, and scripted game assets using Adobe CC and Frostbite - EA's in-house game engine.​​​​​​​ 
+						From Summer 2016 and May-October 2017, I worked at EA Visceral on an action-adventure Star Wars console game and collaborated with engineers, artists, designers, and product managers to create motion mock ups and design fictional interfaces inspired by the Star Wars universe. <br>
+						<br>I worked alongside my mentor Justin Porter, motion graphics artist Matthew Pearson, and gameplay and engineering teams to create cinematic UX , including user feedback systems, heads up displays for vehicles, and other diegetic communication features.  
 						<br>
 						<button id="button1" class="button">Learn more</button>
 					</p>
@@ -81,9 +80,9 @@
 		        <div class="timeline-slide" style="background-image: url(https://pngimg.com/uploads/tesla_car/tesla_car_PNG30.png); background-size: auto 60%" data-year="2006">
 		          	<div class="timeline-slide__content">
 		            <h4 class="timeline-title">Tesla</h4>
-		            <p class="timeline-text">From January to August 2018, I interned as a UX design intern on the Supply Chain Automation team at Tesla. I worked with product managers and engineers to tackle tough technical challenges and create innovative new solutions to support the entirety of Tesla's supply chain.<br>
+		            <p class="timeline-text">From January to August 2018, I interned as a UX design intern on the Supply Chain Automation team at Tesla as the only designer. I worked with product managers and engineers to tackle tough technical challenges and create innovative new solutions to support the entirety of Tesla's supply chain.<br>
 		            <br>
-					Working as the only designer on the team was rewarding but a challenge. I conducted user testing and field research, created wireframes and prototypes, and constantly iterated on my work. I learned to pitch to key stakeholders, negotiate and compromise with differing opinions, and observed the inner workings of supply chain, manufacturing, and operations in one of the most innovative automotive companies in the world.<br>
+					I conducted user testing and field research, created wireframes and prototypes, and constantly iterated on my work. I learned to pitch to key stakeholders, negotiate and compromise with differing opinions, and observed the inner workings of supply chain, manufacturing, and operations in one of the most innovative automotive companies in the world.<br>
 					<button id="button4" class="button">Learn more</button>
 					</p>
 		          </div>
@@ -196,7 +195,7 @@
 	      window.clearInterval(intervalId);
 	      callback.call(this);
 	    }
-	  }, 1000);
+	  }, 600);
 	}
 
 	function setVisible(selector, visible) {
