--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <title>Melody Ting</title>
   <meta name="description" content="Melody Ting">
   <meta name="author" content="SitePoint">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
 
   <link href="https://fonts.googleapis.com/css?family=Nunito+Sans&display=swap" rel="stylesheet">
 
@@ -22,12 +24,14 @@
     <section id="first">
     	<video src="Riposte.mp4"  autoplay muted loop class="video"></video>
     	<div class="page-container" id ="landing" href="#0">
-    		<h1 class="name">melody ting</h1>   	
-    		<svg class="line" height="0" width="500">
-  				<line  x1="0" y1="0" x2="200" y2="0" style="stroke:rgb(0,0,0);stroke-width:2" />
+    		<div id="intro_text">
+    		<h1 class="name">melody ting</h1>  
+    		<svg class="line">
+  				<line  x1="0" y1="0" x2="200" y2="0" style="stroke:rgb(0,0,0);stroke-width:3" />
 			</svg>
-			<h2 class="titles" style="text-align: right; left: 67%">product designer<br>creative technologist<br>illustrator</h2>
+			<h2 class="titles">product designer<br>creative technologist<br>illustrator</h2>
 			<a class="resume" href="https://www.dropbox.com/s/39n4jw0o61iuv1e/Resume_MelodyTing.pdf?dl=0">resume</a>
+		    </div>
 			<h3 id="below">scroll down for projects</h3>
 			<i class="down"></i>
     	</div>
