--- a/maxis.html
+++ b/maxis.html
@@ -7,27 +7,24 @@
   <meta name="author" content="SitePoint">
   <link href="https://fonts.googleapis.com/css?family=Nunito+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="onepage/onepage-scroll.css" type="text/css">
-
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.7.1/slick.min.css'>
   <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.js"></script>
 </head>
-
-<body style="overflow-y: auto;scroll-behavior: smooth">
- <section>
+<body onload="styleMenuSelection()" style="overflow-y: auto;scroll-behavior: smooth">
     	<div class="page-container">
-    		<h1 id="page_title2">EA maxis</h1>   	
-    		<svg id="page_underline2" height="0" width="200">
-  				<line/>
-  			</svg>
-        <div class="side_nav" id="side_nav">
-          <div class="side_nav_item" id="home">home</div>
-          <div class="side_nav_item" id="visceral">EA visceral</div>
-          <div class="side_nav_item" id="maxis">EA maxis</div>
-          <div class="side_nav_item" id="collegebacker">collegebacker</div>
-          <div class="side_nav_item" id="tesla">tesla</div>
-        </div>
+    		<h1 id="page_title2">melody ting</h1>     
+  <svg id="page_underline2" height="0" width="500">
+      <line style="stroke:rgb(0,0,0);stroke-width:2" />
+  </svg>
+  <div class="side_nav" id="side_nav">
+        <div class="side_nav_item" id="home">virtual facility</div>
+        <div class="side_nav_item" id="visceral">EA visceral</div>
+        <div class="side_nav_item" id="maxis">EA maxis</div>
+        <div class="side_nav_item" id="collegebacker">collegebacker</div>
+        <div class="side_nav_item" id="tesla">tesla</div>
         <br><br>
+        <div class="side_nav_item" id="resume" style="text-decoration: underline;">resume</div>
+  </div>
+  <br><br>
         <h2 class="subtitle">overview</h2>
         <p class="content">From October to December 2017, I interned with the UX design team on Project Campfire at EA Maxis, working on the Sims Mobile app - the mobile adaptation from the popular franchise. I worked with designers, product managers, artists, and engineers to create a social networking feature on a game that has accumulated over 2 million downloads worldwide. The game is currently available for free download for Android and iOS devices.</p>
         <h2 class="subtitle">what I did</h2>
@@ -58,7 +55,6 @@
         <p class="content">I left EA in December 2017 after my internship ended. Looking back, I am interested in seeing how the introduction of stickers contributes to the Sims Mobile social network and whether my concerns about player alienation came to be. I'm excited to see what future development on the feature brings to the game.
         <br>
 </div>
-</section>
 <script>
   //from nnnnnn on stackoverflow
   function GetElementInsideContainer(containerID, childID) {
@@ -74,7 +70,7 @@
       location.href = "index.html";
     }
     visceral.onclick = function () {
-        location.href = "visceral-protected.html";
+        location.href = "visceral.html";
     };
     collegebacker.onclick = function () {
         location.href = "collegebacker-protected.html";
@@ -82,11 +78,45 @@
     tesla.onclick = function () {
       location.href = "tesla.html";
     };
+    resume.onclick = function() {
+      location ="https://www.dropbox.com/s/sdbqeb9p5i5b4wf/Resume_MelodyTing.pdf?dl=0"
+    }
+</script>
+<script>
+  function styleMenuSelection() {
+    var home = GetElementInsideContainer("side_nav","home");
+    var visceral = GetElementInsideContainer("side_nav","visceral");
+    var collegebacker = GetElementInsideContainer("side_nav","collegebacker");
+    var tesla = GetElementInsideContainer("side_nav","tesla");
+    var maxis = GetElementInsideContainer("side_nav","maxis");
+
+    var projectPath = window.location.pathname.replace('/', '')
+
+    switch(projectPath) {
+      case 'visceral.html':
+        visceral.style.fontWeight = 'bold'
+        break
+      case 'index.html': 
+        home.style.fontWeight = 'bold'
+        break
+      case 'collegebacker-protected.html':
+        collegebacker.style.fontWeight = 'bold'
+        break
+      case 'tesla.html':
+        tesla.style.fontWeight = 'bold'
+        break
+      case 'maxis.html':
+        maxis.style.fontWeight = 'bold'
+        break
+      default:
+        break
+    }
+
+  }
 </script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.7.1/slick.min.js'></script>
 <script  src="./timeline.js"></script>
 <script type="text/javascript" src="onepage/jquery.onepage-scroll.js"></script>
-</div>
 </body>
 </html>
