--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
   </div>
   <br><br>
 	<h2 class="subtitle">overview</h2>
-	<p class="content">Virtual Facility is a SAAS that empowers facilities to target alarms, optimize operations, and create better work. The core product consists of an alarm triaging software that enables users to quickly identify alarms, target root causes and identify opportunities to create better work.</p>
+	<p class="content">Virtual Facility is a SAAS company that empowers facilities to target alarms, optimize repairs and maintenance, and create better work. The core product consists of an alarm triaging software that enables users to quickly identify alarms, target root causes, and identify opportunities to create streamline facility operations.</p>
   <h2 class="subtitle">what i do </h2>
-  <p class="content">As one of two designers on the team, my responsibilities span the entire spectrum of design - from brainstorming and prototyping core features to conducting user interviews and distilling feedback. My coworker and fellow designer <a href="https://rolanddubois.com/">Roland Dubois</a> have been tasked with establishing the design system and foundation for the web platform and are in the process of documenting our entire process. For more information on specific projects I have been working on, please reach out to me directly via email or <a href="linkedin.com/in/melody-ting">Linkedin</a>. </p>
+  <p class="content">As one of two designers on the team, my responsibilities span the entire spectrum of design - from brainstorming and prototyping core features to conducting user interviews and distilling feedback. My coworker and fellow designer <a href="https://rolanddubois.com/">Roland Dubois</a> and I have been tasked with establishing the design system and foundation for the web platform and are in the process of documenting our entire process. For more information on specific projects I have been working on, please reach out to me directly via email or <a href="https://www.linkedin.com/in/melody-ting/">Linkedin</a>. </p>
 
 </div>
 <script>
