--- a/collegebacker.html
+++ b/collegebacker.html
@@ -1,20 +1,17 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-
   <title>Melody Ting</title>
   <meta name="description" content="Melody Ting">
   <meta name="author" content="SitePoint">
   <link href="https://fonts.googleapis.com/css?family=Nunito+Sans&display=swap" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.7.1/slick.min.css">
   <link rel="stylesheet" href="onepage/onepage-scroll.css" type="text/css">
-
   <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.js"></script>
 </head>
-
 <body onload="styleMenuSelection()" style="overflow-y: auto;scroll-behavior: smooth">
- <section>
-    	<div class="page-container">
-    		<h1 id="page_title2">melody ting</h1>     
+  <div class="page-container">
+  <h1 id="page_title2">melody ting</h1>     
   <svg id="page_underline2" height="0" width="500">
       <line style="stroke:rgb(0,0,0);stroke-width:2" />
   </svg>
@@ -27,8 +24,7 @@
     <br><br>
     <div class="side_nav_item" id="resume" style="text-decoration: underline;">resume</div>
   </div>
-    <br><br>
-
+      <br><br>
       <h2 class="subtitle">the challenge</h2>
       <p class="content">While I worked on multiple features, one of biggest challenges I tackled was the entire onboarding process for parents looking to set up a CollegeBacker account for their child attending Intrepid Academy. Intrepid Academy is a CollegeBacker partner that provides grants to their students who set up accounts, rewarding families over years of attendance. My task was to design the entire flow a parent would take from their first time setting up the account to submitting their 529 application. This challenge took about 3 weeks from start to user testing.</p>
       <h2 class="subtitle">the users</h2>
@@ -56,7 +52,7 @@
       <img class="visuals" src="Work_Documentation/CollegeBacker/iteration.png">
       <h2 class="subtitle">iteration</h2>
       <p class="content">One step of the flow underwent multiple changes was the confirmation page right before the user of an institution-owned - as opposed to a parent-owned - account made the first contribution to their child's savings account. By default, Intrepid Academy parents are automatically set up with an institution-owned account, which does not require the parent's personal identifiable information necessary for a parent-owned account.Instead of presenting the user with their current limitations straight away, we chose to display the benefits of switching accounts before informing the user of the drawbacks of the current one. By starting with a positive screen, we offer the user an opportunity for greater control over their contributions, rather than intimidating them from contributing right away.<br>
-        <br><br>
+      <br><br>
 </div>
 <script>
   function styleMenuSelection() {
@@ -87,7 +83,6 @@
       default:
         break
     }
-
   }
 </script>
 <script>
