--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-
   <title>Melody Ting</title>
   <meta name="description" content="Melody Ting">
   <meta name="author" content="SitePoint">
@@ -10,27 +9,28 @@
   <link rel="stylesheet" href="onepage/onepage-scroll.css" type="text/css">
   <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.js"></script>
 </head>
-<br><br>
 <body onload="styleMenuSelection()" style="overflow-y: auto;scroll-behavior: smooth">
 <div class="page-container">
 	<h1 id="page_title2">melody ting</h1>   	
 	<svg id="page_underline2" height="0" width="500">
-			<line style="stroke:rgb(0,0,0);stroke-width:2" />
+			<line style="stroke:rgb(0,0,0);stroke-width:2"/>
 	</svg>
 	<div class="side_nav" id="side_nav">
-    <div class="side_nav_item" id="home">virtual facility</div>
+    <div class="side_nav_item" id="home" style="font-weight:bolder">about</div>
     <div class="side_nav_item" id="visceral">EA visceral</div>
     <div class="side_nav_item" id="maxis">EA maxis</div>
     <div class="side_nav_item" id="collegebacker">collegebacker</div>
     <div class="side_nav_item" id="tesla">tesla</div>
+    <div class="side_nav_item" id="orai">orai</div>    
     <br><br>
     <div class="side_nav_item" id="resume" style="text-decoration: underline;">resume</div>
   </div>
   <br><br>
-	<h2 class="subtitle">overview</h2>
-	<p class="content">Virtual Facility is a SAAS company that empowers facilities to target alarms, optimize repairs and maintenance, and create better work. The core product consists of an alarm triaging software that enables users to quickly identify alarms, target root causes, and identify opportunities to create streamline facility operations.</p>
-  <h2 class="subtitle">what i do </h2>
-  <p class="content">As one of two designers on the team, my responsibilities span the entire spectrum of design - from brainstorming and prototyping core features to conducting user interviews and distilling feedback. My coworker and fellow designer <a href="https://rolanddubois.com/">Roland Dubois</a> and I have been tasked with establishing the design system and foundation for the web platform and are in the process of documenting our entire process. For more information on specific projects I have been working on, please reach out to me directly via email or <a href="https://www.linkedin.com/in/melody-ting/">Linkedin</a>. </p>
+	<h2 class="subtitle">who am i</h2>
+	<p class="content">Melody Ting is a digital product designer. She graduated from Carnegie Mellon University with a Bachelor's degree in Cognitive Science and Art in 2018. She has experience designing across a variety of platforms, from creating UI for a <a href="/visceral.html"> Star Wars vehicle</a> to designing <a href="/tesla.html">data-heavy solutions </a> for Tesla's supply chain automation operations. </p><br>
+  <p class="content"></p>
+  <h2 class="subtitle">where i am now</h2>
+  <p class="content">You can find me designing in midtown NYC at <a href="https://www.virtualfacility.ai/">Virtual Facility</a>, creating facility automation software. </p>
 
 </div>
 <script>
@@ -40,25 +40,28 @@
     var collegebacker = GetElementInsideContainer("side_nav","collegebacker");
     var tesla = GetElementInsideContainer("side_nav","tesla");
     var maxis = GetElementInsideContainer("side_nav","maxis");
+    var orai = GetElementInsideContainer("side_nav","orai");
 
     var projectPath = window.location.pathname.replace('/', '')
 
     switch(projectPath) {
       case 'visceral.html':
-        visceral.style.fontWeight = 'bold'
+        visceral.style.fontWeight = 'bolder'
         break
       case 'index.html': 
-        home.style.fontWeight = 'bold'
+        home.style.fontWeight = 'bolder'
         break
-      case 'collegebacker-protected.html':
-        collegebacker.style.fontWeight = 'bold'
+      case 'collegebacker.html':
+        collegebacker.style.fontWeight = 'bolder'
         break
       case 'tesla.html':
-        tesla.style.fontWeight = 'bold'
+        tesla.style.fontWeight = 'bolder'
         break
       case 'maxis.html':
-        maxis.style.fontWeight = 'bold'
+        maxis.style.fontWeight = 'bolder'
         break
+      case 'orai.html':
+        orai.style.fontWeight = "bolder"
       default:
         break
     }
@@ -67,19 +70,19 @@
 </script>
 <script type="text/javascript">
     //from nnnnnn on stackoverflow
-	function GetElementInsideContainer(containerID, childID) {
+  function GetElementInsideContainer(containerID, childID) {
     var elm = document.getElementById(childID);
     var parent = elm ? elm.parentNode : {};
-    return (parent.id && parent.id === containerID) ? elm : {};
 
-	};
+    return (parent.id && parent.id === containerID) ? elm : {};
+  };
   
-	var home = GetElementInsideContainer("side_nav","home");
-	var tesla = GetElementInsideContainer("side_nav","tesla");
-	var maxis = GetElementInsideContainer("side_nav","maxis");
+  var home = GetElementInsideContainer("side_nav","home");
+  var tesla = GetElementInsideContainer("side_nav","tesla");
   var visceral = GetElementInsideContainer("side_nav","visceral");
-	var collegebacker = GetElementInsideContainer("side_nav","collegebacker");
-  var resume = GetElementInsideContainer("side_nav","resume");
+  var maxis = GetElementInsideContainer("side_nav","maxis");
+  var collegebacker = GetElementInsideContainer("side_nav","collegebacker");
+  var orai = GetElementInsideContainer("side_nav","orai");
 
     home.onclick = function () {
       location.href = "index.html";
@@ -87,15 +90,18 @@
     tesla.onclick = function () {
         location.href = "tesla.html";
     };
+    visceral.onclick = function () {
+      location.href = "visceral.html"
+    };
     maxis.onclick = function () {
         location.href = "maxis.html";
     };
-    visceral.onclick=function (){
-      location.href = "visceral.html"
-    }
     collegebacker.onclick = function () {
-    	location.href = "collegebacker.html";
+      location.href = "collegebacker-protected.html";
     };
+    orai.onclick = function (){
+      location.href = "orai.html";
+    }
     resume.onclick = function() {
       location ="https://www.dropbox.com/s/sdbqeb9p5i5b4wf/Resume_MelodyTing.pdf?dl=0"
     }
