--- a/maxis.html
+++ b/maxis.html
@@ -16,11 +16,12 @@
       <line style="stroke:rgb(0,0,0);stroke-width:2" />
   </svg>
   <div class="side_nav" id="side_nav">
-        <div class="side_nav_item" id="home">virtual facility</div>
+        <div class="side_nav_item" id="home">about</div>
         <div class="side_nav_item" id="visceral">EA visceral</div>
         <div class="side_nav_item" id="maxis">EA maxis</div>
         <div class="side_nav_item" id="collegebacker">collegebacker</div>
         <div class="side_nav_item" id="tesla">tesla</div>
+        <div class="side_nav_item" id="orai">orai</div>
         <br><br>
         <div class="side_nav_item" id="resume" style="text-decoration: underline;">resume</div>
   </div>
@@ -52,36 +53,9 @@
         <p class="content">On the receiving end, players whose Sims have been given stickers are notified by whom they were given so as to encourage players to reciprocate the gesture.</p>
         <img class="visuals" src="https://pro2-bar-s3-cdn-cf.myportfolio.com/a9d5994869e24f0e572abe9b86b7383e/85f7301e-72a4-4ff9-9b26-cd5b117e4414_rw_1200.gif?h=d1f947f6cba275a4ca0297a4163a34cf">
         <h2 class="subtitle">retrospection</h2>
-        <p class="content">I left EA in December 2017 after my internship ended. Looking back, I am interested in seeing how the introduction of stickers contributes to the Sims Mobile social network and whether my concerns about player alienation came to be. I'm excited to see what future development on the feature brings to the game.
+        <p class="content">I left EA in December 2017 after my internship ended. Looking back, I am interested in seeing how the introduction of stickers contributes to the Sims Mobile social network and whether my concerns about player alienation came to be. I'm excited to see what future development on the feature brings to the game.</p>
         <br>
 </div>
-<script>
-  //from nnnnnn on stackoverflow
-  function GetElementInsideContainer(containerID, childID) {
-    var elm = document.getElementById(childID);
-    var parent = elm ? elm.parentNode : {};
-    return (parent.id && parent.id === containerID) ? elm : {};
-  };
-  var home = GetElementInsideContainer("side_nav","home");
-  var visceral = GetElementInsideContainer("side_nav","visceral");
-  var collegebacker = GetElementInsideContainer("side_nav","collegebacker");
-  var tesla = GetElementInsideContainer("side_nav","tesla");
-    home.onclick = function () {
-      location.href = "index.html";
-    }
-    visceral.onclick = function () {
-        location.href = "visceral.html";
-    };
-    collegebacker.onclick = function () {
-        location.href = "collegebacker-protected.html";
-    };
-    tesla.onclick = function () {
-      location.href = "tesla.html";
-    };
-    resume.onclick = function() {
-      location ="https://www.dropbox.com/s/sdbqeb9p5i5b4wf/Resume_MelodyTing.pdf?dl=0"
-    }
-</script>
 <script>
   function styleMenuSelection() {
     var home = GetElementInsideContainer("side_nav","home");
@@ -89,30 +63,71 @@
     var collegebacker = GetElementInsideContainer("side_nav","collegebacker");
     var tesla = GetElementInsideContainer("side_nav","tesla");
     var maxis = GetElementInsideContainer("side_nav","maxis");
+    var orai = GetElementInsideContainer("side_nav","orai");
 
     var projectPath = window.location.pathname.replace('/', '')
 
     switch(projectPath) {
       case 'visceral.html':
-        visceral.style.fontWeight = 'bold'
+        visceral.style.fontWeight = 'bolder'
         break
       case 'index.html': 
-        home.style.fontWeight = 'bold'
+        home.style.fontWeight = 'bolder'
         break
-      case 'collegebacker-protected.html':
-        collegebacker.style.fontWeight = 'bold'
+      case 'collegebacker.html':
+        collegebacker.style.fontWeight = 'bolder'
         break
       case 'tesla.html':
-        tesla.style.fontWeight = 'bold'
+        tesla.style.fontWeight = 'bolder'
         break
       case 'maxis.html':
-        maxis.style.fontWeight = 'bold'
+        maxis.style.fontWeight = 'bolder'
         break
+      case 'orai.html':
+        orai.style.fontWeight = "bolder"
       default:
         break
     }
 
   }
+</script>
+<script type="text/javascript">
+    //from nnnnnn on stackoverflow
+  function GetElementInsideContainer(containerID, childID) {
+    var elm = document.getElementById(childID);
+    var parent = elm ? elm.parentNode : {};
+
+    return (parent.id && parent.id === containerID) ? elm : {};
+  };
+  
+  var home = GetElementInsideContainer("side_nav","home");
+  var tesla = GetElementInsideContainer("side_nav","tesla");
+  var visceral = GetElementInsideContainer ("side_nav", "visceral");
+  var maxis = GetElementInsideContainer("side_nav","maxis");
+  var collegebacker = GetElementInsideContainer("side_nav","collegebacker");
+  var orai = GetElementInsideContainer("side_nav","orai");
+
+    home.onclick = function () {
+      location.href = "index.html";
+    };
+    tesla.onclick = function () {
+        location.href = "tesla.html";
+    };
+    visceral.onclick = function () {
+      location.href = "visceral.html"
+    };
+    maxis.onclick = function () {
+        location.href = "maxis.html";
+    };
+    collegebacker.onclick = function () {
+      location.href = "collegebacker-protected.html";
+    };
+    orai.onclick = function (){
+      location.href = "orai.html";
+    }
+    resume.onclick = function() {
+      location ="https://www.dropbox.com/s/sdbqeb9p5i5b4wf/Resume_MelodyTing.pdf?dl=0"
+    }
 </script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.7.1/slick.min.js'></script>
