--- a/visceral.html
+++ b/visceral.html
@@ -1,7 +1,6 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-
   <title>Melody Ting</title>
   <meta name="description" content="Melody Ting">
   <meta name="author" content="SitePoint">
@@ -10,41 +9,41 @@
   <link rel="stylesheet" href="onepage/onepage-scroll.css" type="text/css">
   <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.js"></script>
 </head>
-
 <body onload="styleMenuSelection()" style="overflow-y: auto;scroll-behavior: smooth">
-<div class="page-container">
-<h1 id="page_title2">melody ting</h1>     
+  <div class="page-container">
+  <h1 id="page_title2">melody ting</h1>     
   <svg id="page_underline2" height="0" width="500">
       <line style="stroke:rgb(0,0,0);stroke-width:2" />
   </svg>
   <div class="side_nav" id="side_nav">
-    <div class="side_nav_item" id="home">virtual facility</div>
+    <div class="side_nav_item" id="home">about</div>
     <div class="side_nav_item" id="visceral">EA visceral</div>
     <div class="side_nav_item" id="maxis">EA maxis</div>
     <div class="side_nav_item" id="collegebacker">collegebacker</div>
     <div class="side_nav_item" id="tesla">tesla</div>
+    <div class="side_nav_item" id="orai">orai</div>
     <br><br>
     <div class="side_nav_item" id="resume" style="text-decoration: underline;">resume</div>
   </div>
-  <br><br>
-	<h2 class="subtitle">overview</h2>
-	<p class="content">The UX team at Visceral consisted of two full-time motion graphics/designers, four engineers, a QA engineer, and a product manager. Throughout my time there, I worked most closely with the two other designers to create motion mock ups, and UI. </p>
-	<h2 class="subtitle">fictional UI</h2>
-	<p class="content">These screens were mock-ups for a new spaceship that was hijacked by the game protagonists from Imperial forces. As such, I looked to elements from the Star Wars Empire for inspiration for the interface elements and design.</p>
-	<img class="visuals" src="Work_Documentation/Mongoose.png">
-	<h2 class="subtitle">user feedback indicators</h2>
-	<p class="content">One of the primary features I worked on was the design for enemy awareness meters. These were in-game UI elements that informed players how suspicious or "aware" the AI were of their presence during stealth play modes and are an integral part in any action-adventure game with AI.</p>
-	<video class="visuals" width="auto" height="auto" controls>
-	<source src="AMMockup_YellowContract.mp4" type="video/mp4">
-	Your browser does not support the video tag.
-	</video>
-	<p class="content">Motion mock-ups allowed me to present UI in the context of the game and visualize how a user would encounter it in its various states.</p>
-	<video class="visuals" width="auto" height="auto" controls>
-	<source src="Mongoose_Shield_Screen.mp4" type="video/mp4">
-	Your browser does not support the video tag.
-	</video>
-  <br><br>
-</div>
+    <br><br>
+  	<h2 class="subtitle">overview</h2>
+  	<p class="content">The UX team at Visceral consisted of two full-time motion graphics/designers, four engineers, a QA engineer, and a product manager. Throughout my time there, I worked most closely with the two other designers to create motion mock ups, and UI. </p>
+  	<h2 class="subtitle">fictional UI</h2>
+  	<p class="content">These screens were mock-ups for a new spaceship that was hijacked by the game protagonists from Imperial forces. As such, I looked to elements from the Star Wars Empire for inspiration for the interface elements and design.</p>
+  	<img class="visuals" src="Work_Documentation/Mongoose.png">
+  	<h2 class="subtitle">user feedback indicators</h2>
+  	<p class="content">One of the primary features I worked on was the design for enemy awareness meters. These were in-game UI elements that informed players how suspicious or "aware" the AI were of their presence during stealth play modes and are an integral part in any action-adventure game with AI.</p>
+  	<video class="visuals" width="auto" height="auto" controls>
+  	<source src="AMMockup_YellowContract.mp4" type="video/mp4">
+  	Your browser does not support the video tag.
+  	</video>
+  	<p class="content">Motion mock-ups allowed me to present UI in the context of the game and visualize how a user would encounter it in its various states.</p>
+  	<video class="visuals" width="auto" height="auto" controls>
+  	<source src="Mongoose_Shield_Screen.mp4" type="video/mp4">
+  	Your browser does not support the video tag.
+  	</video>
+    <br><br>
+  </div>
 <script>
   function styleMenuSelection() {
     var home = GetElementInsideContainer("side_nav","home");
@@ -52,25 +51,28 @@
     var collegebacker = GetElementInsideContainer("side_nav","collegebacker");
     var tesla = GetElementInsideContainer("side_nav","tesla");
     var maxis = GetElementInsideContainer("side_nav","maxis");
+    var orai = GetElementInsideContainer("side_nav","orai");
 
     var projectPath = window.location.pathname.replace('/', '')
 
     switch(projectPath) {
       case 'visceral.html':
-        visceral.style.fontWeight = 'bold'
+        visceral.style.fontWeight = 'bolder'
         break
       case 'index.html': 
-        home.style.fontWeight = 'bold'
+        home.style.fontWeight = 'bolder'
         break
       case 'collegebacker.html':
-        collegebacker.style.fontWeight = 'bold'
+        collegebacker.style.fontWeight = 'bolder'
         break
       case 'tesla.html':
-        tesla.style.fontWeight = 'bold'
+        tesla.style.fontWeight = 'bolder'
         break
       case 'maxis.html':
-        maxis.style.fontWeight = 'bold'
+        maxis.style.fontWeight = 'bolder'
         break
+      case 'orai.html':
+        orai.style.fontWeight = "bolder"
       default:
         break
     }
@@ -79,17 +81,18 @@
 </script>
 <script type="text/javascript">
     //from nnnnnn on stackoverflow
-	function GetElementInsideContainer(containerID, childID) {
+  function GetElementInsideContainer(containerID, childID) {
     var elm = document.getElementById(childID);
     var parent = elm ? elm.parentNode : {};
 
     return (parent.id && parent.id === containerID) ? elm : {};
-	};
+  };
   
-	var home = GetElementInsideContainer("side_nav","home");
-	var tesla = GetElementInsideContainer("side_nav","tesla");
-	var maxis = GetElementInsideContainer("side_nav","maxis");
-	var collegebacker = GetElementInsideContainer("side_nav","collegebacker");
+  var home = GetElementInsideContainer("side_nav","home");
+  var tesla = GetElementInsideContainer("side_nav","tesla");
+  var maxis = GetElementInsideContainer("side_nav","maxis");
+  var collegebacker = GetElementInsideContainer("side_nav","collegebacker");
+  var orai = GetElementInsideContainer("side_nav","orai");
 
     home.onclick = function () {
       location.href = "index.html";
@@ -101,8 +104,11 @@
         location.href = "maxis.html";
     };
     collegebacker.onclick = function () {
-    	location.href = "collegebacker-protected.html";
+      location.href = "collegebacker-protected.html";
     };
+    orai.onclick = function (){
+      location.href = "orai.html";
+    }
     resume.onclick = function() {
       location ="https://www.dropbox.com/s/sdbqeb9p5i5b4wf/Resume_MelodyTing.pdf?dl=0"
     }
