--- a/orai.html
+++ b/orai.html
@@ -31,10 +31,23 @@
     <h2 class="subtitle">what I did</h2>
     <p class="content">As a member of the design team, I worked alongside the design lead and an instructional designer to create original content, streamline the design system, and design consumer-facing content that reached millions of users worldwide.</p>
     <h2 class="subtitle">the problem</h2>
-    <p class="content">One of the most challenging issues I tackled during my time at Orai was improving user retention. Orai was experiencing an overwhelming number of user dropout after a week of 'bingeing' on lesson content. Users were also consuming content at a higher rate than the team was able to produce. </p>
-    <br>
-
-    <p class="content" style="font-weight: bolder">more documentation to come</p>
+    <p class="content">One of the most challenging issues I tackled during my time at Orai was improving user retention. Orai was experiencing an overwhelming number of user dropout after a week of 'bingeing' on lesson content. Users were also consuming content at a higher rate than the team was able to produce.</p>
+    <h2 class="subtitle">the process</h2>
+    <p class="content">
+    <a href="https://trainingindustry.com/articles/content-development/knowledge-retention-tactics-for-more-effective-learning"> Research</a> demonstrates that repeated, consistent exposure to concepts is the most effective method for strengthening learning retention. I examined popular and effective learning apps to identify how they employed different methods to encourage users to return.</p><br>
+    <p class="content">Our understanding of learning science served as the foundation for the redesign and informed our approach, which exposed users to consistent material in short doses throughout the day and encouraged regular practice.</p>
+    <img class="visuals" src="Work_Documentation/Orai_wireframing.jpg">
+    <p class="content">I conducted user interviews with existing users - both within our enterprise client teams and individual users - to learn more about our users' learning objectives. I learned that users were eager to learn new content, but exhausted material too quickly. They would 'binge' the app but found little reason to return after they finished their lessons. While we loved that users were so excited by the content that they would exhaust the lessons so quickly, we also recognized the importance of practicing material and refining skills. As such, we decided to introduce cadence setting.</p>
+    <img class="visuals" src="Work_Documentation/Cadence_guided.jpg">
+    <p class="content">While the original experience allowed users to pick and choose from an open collection of lessons, the new approach was regimented - users would complete a quiz as part of their onboarding to better determine their personal learning objectives. From there, their results would determine which lesson pack was most appropriate for their learning goals. The lesson packs were designed to span 5-days and included a combination of new material and reinforcing learned content.</p>
+    <img class="visuals" src="Work_Documentation/Cadence_lesson.jpg">
+    <p class="content">I created an animated mock-up to demonstrate interaction and flow.</p>
+     <video class="visuals" width="50%" height="50%" controls>
+        <source src="Work_Documentation/Cadence_v1.mp4">
+    </video>
+    <h2 class="subtitle">looking ahead</h2>
+    <p class="content">My time at Orai was cut short shortly after the experience redesign was moved to development. I wish the best to the Orai team as they move ahead and look forward to where they go in the future.</p>
+  
     <br><br>
   </div>
 <script>
